[gd_scene load_steps=13 format=2]

[ext_resource path="res://TallShip.gd" type="Script" id=1]
[ext_resource path="res://ship1.png" type="Texture" id=2]
[ext_resource path="res://enemypip_wip.png" type="Texture" id=3]
[ext_resource path="res://pngkey.com-glowing-light-png-1538032.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://WeaponResources/Base/torpedo1.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.37037, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.345098, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.7
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.01
color_ramp = SubResource( 2 )
hue_variation = 0.09

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.7
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.01
color_ramp = SubResource( 2 )
hue_variation = 0.09

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.109091 ), 0.0, 0.0, 0, 0, Vector2( 0.680412, 0.454545 ), 1.67081, 1.67081, 0, 0, Vector2( 0.989691, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 15.0
height = 80.0

[node name="TallShip" type="KinematicBody2D" groups=[
"ships",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="Engines" type="Node2D" parent="."]

[node name="ThrusterFireLeft" type="Particles2D" parent="Engines"]
position = Vector2( -40, 11 )
amount = 14
lifetime = 0.1
randomness = 0.11
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="ThrusterFireRight" type="Particles2D" parent="Engines"]
position = Vector2( -40, -11 )
amount = 14
lifetime = 0.1
randomness = 0.11
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="ShipSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="EnginePosition" type="Position2D" parent="ShipSprite"]
position = Vector2( 0, 34.487 )
rotation = -1.5708

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
width = 25.0
width_curve = SubResource( 5 )
default_color = Color( 0.227451, 0.819608, 0.792157, 0.478431 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="WaypointPath" type="Line2D" parent="."]
z_index = -1
width = 5.0
default_color = Color( 0.4, 0.501961, 1, 1 )
texture = ExtResource( 7 )
texture_mode = 2
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="WaypointSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -310.899, -317.641 )
texture = ExtResource( 3 )

[node name="Hardpoints" type="Node2D" parent="."]

[node name="TargetingSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 44.0
rect_min_size = Vector2( 100, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipOutline" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -44, 0, -43, -4, -29, -19, -16, -17, -16, -13, 28, -8, 52, -8, 52, 8, 28, 8, -16, 13, -16, 17, -29, 19, -43, 4 )
[connection signal="input_event" from="." to="." method="_on_TallShip_input_event"]
